Correctly add line breaks in tooltip info

--- a/src/core/tooltip/tooltip.less
+++ b/src/core/tooltip/tooltip.less
@@ -72,6 +72,7 @@
   position: relative;
   margin-left: 10px;
   width: 300px;
+  max-width: 20vw;
 }
 
 @header-count: 6;
@@ -122,7 +123,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  padding: 15px;
+  padding: 5%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -143,7 +144,7 @@
 .tooltipCategories {
   display: inline;
   font-family: "HalisGR-Regular", sans-serif;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 1.2;
   // font-weight: bold;
   color: #fff;
